fix: gap in footer contact form

--- a/eleff-law/app/public/wp-content/themes/elefflawclone/components/footer-contact-form.css
+++ b/eleff-law/app/public/wp-content/themes/elefflawclone/components/footer-contact-form.css
@@ -109,6 +109,7 @@
 @media screen and (max-width: 768px) {
   .footer-contact-form .form-field-group {
     flex-direction: column;
+    gap: 0;
   }
 }
 
